arrow on profile

--- a/profile.html
+++ b/profile.html
@@ -62,7 +62,10 @@
         <div class="info-line">
             <span class="info-type">Tickets: </span> <div class="box"></div>
         </div>
-        <button type="button" class='button-outfit'>Outfit Details</button>
+        <div id="button-container">
+            <button type="button" class='button-outfit'>Outfit Details</button>
+            <img id="costume-arrow" src="images/arrowRight.svg" alt="Your browser does not support svg"/>
+        </div>
         <div class="costume-info">
 
         </div>
