--- a/event.html
+++ b/event.html
@@ -54,7 +54,10 @@
 
 
     <div id="event-info">
-        <h1>HELLO</h1>
+        <h2>The Event</h2>
+        <p>
+            The rebellion is massing on Endor, preparing an assault on the shield generator.
+        </p>
         <img class="event-image" src="images/redwood1.jpg" alt="Forest 1" width="900px" />
         <h1>HELLO</h1>
         <img class="event-image" src="images/redwood3.jpg" alt="Forest 3" width="900px" />
