--- a/tickets.html
+++ b/tickets.html
@@ -4,11 +4,12 @@
 <meta charset="UTF-8"/>
 <link href="css/topbar.css" rel="stylesheet" type="text/css" />
 <link href="css/tickets.css" rel="stylesheet" type="text/css" />
-<script src="js/script.js" type="text/javascript"></script>
 <script src = "js/jquery-1.12.2.min.js"></script>
+<script src="js/script.js" type="text/javascript"></script>
 <title>Demo</title>
 </head>
 <body>
+
     <div id="top-bar">
         <div class="title-bar">
             <div class="slider">
@@ -118,12 +119,23 @@
                 <polygon points="0,0 100,10 100,0" style='fill: #0d0d0d;  stroke: #0d0d0d; stroke-width: 3'/>
             </svg>
             <div id="footer-container">
+                <footer>
+                    <hr id="footer-line" />
+                    <p>
+                        <a href = "#">Terms of Use</a> &amp; <a href = "#">Privacy Policy</a>
+                    </p>
+                    <p>
+                        Contact us: <a href="#">email@email.com</a>
+                    </p>
+                    <p>
+                        &#169; A Gathering of... (2016) - C Meehan and L White
+                    </p>
+                </footer>
             </div>
 
 
         </div>
     </div>
-
 
 </body>
 </html>
