started sign-up

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <a href="tickets.html" class="menu-link">Tickets</a>
                     </div>
             </div>
-            <h1 class="heading">A Gathering of ...<br/ >
+            <h1 class="heading">A Gathering of ...<br/>
                     <div id='underline'></div>
             </h1>
             <div id = "logo">
@@ -39,13 +39,13 @@
                 <div id = "login-hint">Log in</div>
             </div>
         </div>
-            <form id = "login">
+            <form id = "login" method="get" action="https://localhost:8443/index.html">
                 <input type="text" name="username" placeholder="Username" /><br/>
                 <div class="form-indicator" id="usernamehint"></div>
                 <input type="password" name="password" placeholder="Password"/><br/>
                 <div class="form-indicator"></div>
                 <input type="submit" value="log in" class="button"/><br />
-                <a href="#" class="button" id="sign-up">sign up</a>
+                <a href="signup.html" class="button" id="sign-up">sign up</a>
             </form>
     </div>
     <div class="content">
