--- a/tickets.html
+++ b/tickets.html
@@ -6,6 +6,8 @@
 <link href="css/tickets.css" rel="stylesheet" type="text/css" />
 <script src = "js/jquery-1.12.2.min.js"></script>
 <script src="js/script.js" type="text/javascript"></script>
+<script src="js/tickets.js" type="text/javascript"></script>
+
 <title>Demo</title>
 </head>
 <body>
@@ -52,7 +54,7 @@
             </svg>
             <div class='package black'>
                 <div class='text'>
-                    <h2 class="packageHeading">Ewok Package<br/>
+                    <h2 id="ewokpackage" class="packageHeading">Ewok Package<br/>
                             <div class='underline'></div>
                     </h2>
                     <ul>
