--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
                 <div id = "login-hint">Log in</div>
             </div>
         </div>
-            <form id = "login" method="get" action="https://localhost:8443/index.html">
-                <input type="text" name="username" placeholder="Username" /><br/>
+            <form id = "login">
+                <input id="username" type="text" name="username" placeholder="Username" /><br/>
                 <div class="form-indicator" id="usernamehint"></div>
-                <input type="password" name="password" placeholder="Password"/><br/>
+                <input id="password" type="password" name="password" placeholder="Password"/><br/>
                 <div class="form-indicator"></div>
                 <input type="submit" value="log in" class="button"/><br />
                 <a href="signup.html" class="button" id="sign-up">sign up</a>
