globe works. resizes on window resize

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-GB" xml:lang="en-GB">
 <head>
-<meta charset="UTF-8"/>
-<link href="css/topbar.css" rel="stylesheet" type="text/css" />
-<link href="css/main.css" rel="stylesheet" type="text/css" />
-<script src="js/three.min.js" type="text/javascript"></script>
-<script src="js/globe.js" type="text/javascript"></script>
-<script src = "js/jquery-1.12.2.min.js" type="text/javascript"></script>
-<script src="js/script.js" type="text/javascript"></script>
-<script src="js/jquery.nicescroll.js" type="text/javascript"></script>
-<script src="js/main.js" type="text/javascript"></script>
-<title>Demo</title>
+    <meta charset="UTF-8"/>
+    <link href="css/topbar.css" rel="stylesheet" type="text/css" />
+    <link href="css/main.css" rel="stylesheet" type="text/css" />
+    <script src = "js/jquery-1.12.2.min.js" type="text/javascript"></script>
+    <script src="js/three.min.js" type="text/javascript"></script>
+    <script src="js/script.js" type="text/javascript"></script>
+    <script src="js/jquery.nicescroll.js" type="text/javascript"></script>
+    <script src="js/main.js" type="text/javascript"></script>
+    <script src="js/globe.js" type="text/javascript"></script>
+    <title>Demo</title>
 </head>
 <body>
 
@@ -60,8 +60,8 @@
         </div>
 
         <div class="planet-side">
-            <!-- <img id='static-endor' src="images/static_planet.png" /> -->
-            <!-- <canvas id="endor-canvas"></canvas> -->
+             <img id='static-endor' src="images/static_planet.png" />
+             <canvas id="endor-canvas"></canvas>
             <div class="activate">
                 <button id="activate-button">Animate</button>
             </div>
