--- a/event.html
+++ b/event.html
@@ -7,6 +7,7 @@
 <script src="js/script.js" type="text/javascript"></script>
 <script src="js/social_media.js" type="text/javascript"></script>
 <script src = "js/jquery-1.12.2.min.js"></script>
+<script src = "js/location.js"></script>
 <title>Demo</title>
 </head>
 <body>
@@ -51,8 +52,7 @@
         <img id="facebook" src="images/facebook.svg" />
     </div>
     <a class="twitter-timeline" href="https://twitter.com/hashtag/StarWars" data-widget-id="714488031558901761"></a>
-
-
+    <div id="map"></div>
     <div id="event-info">
         <h2>The Event</h2>
         <p>
@@ -97,6 +97,7 @@
 
 
     </div>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDcY6v0jwqPDaMP-tKOqArNz9mrABXyXPw&callback=initMap"></script>
 
 </body>
 </html>
