added google maps api

--- a/event.html
+++ b/event.html
@@ -52,15 +52,14 @@
         <img id="facebook" src="images/facebook.svg" />
     </div>
     <a class="twitter-timeline" href="https://twitter.com/hashtag/StarWars" data-widget-id="714488031558901761"></a>
-    <div id="map"></div>
     <div id="event-info">
         <h2>The Event</h2>
         <p>
             The rebellion is massing on Endor, preparing an assault on the shield generator.
         </p>
-        <img class="event-image" src="images/redwood1.jpg" alt="Forest 1" width="900px" />
+        <img class="event-image" src="images/redwood1.jpg" alt="Forest 1"/>
         <h1>HELLO</h1>
-        <img class="event-image" src="images/redwood3.jpg" alt="Forest 3" width="900px" />
+        <img class="event-image" src="images/redwood3.jpg" alt="Forest 3"/>
         <p class="event-text">TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
             TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
             TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
@@ -81,6 +80,7 @@
             TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
             TEXT TEXT
         </p>
+        <div id="map"></div>
         <p class="event-text">TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
             TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
             TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
@@ -92,12 +92,12 @@
             TEXT TEXT
         </p>
 
-        <img class="event-image" src="images/redwood2.jpg" alt="Forest 2" width="900px" />
+        <img class="event-image" src="images/redwood2.jpg" alt="Forest 2"/>
 
 
 
     </div>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDcY6v0jwqPDaMP-tKOqArNz9mrABXyXPw&callback=initMap"></script>
-
+    <script src="https://maps.googleapis.com/maps/api/js?callback=initMap" async="" defer="">
+    </script>
 </body>
 </html>
