changed text section on mainpage to have static background and scroll

--- a/index.html
+++ b/index.html
@@ -49,14 +49,38 @@
             </form>
     </div>
     <div class="content">
-        <div class="main-text">
-            <p>The unrest between the Rebel Alliance and the Galactic Empire has deteriorated into full scale war. The Empire have been surreptitiously building a new Death Star, larger and more powerful than the last. On the Forest Moon of the Planet of Endor, they have set up camp to operate a shield generator, which serves to protect the Death Star during the construction phase. If such a weapon became operational, it would surely spell the end for all who oppose the Empire.</p>
+        <div class="text-side">
+            <div class="big">
+                <span id="top">Join the Rebellion</span>
+                <p id="scroll-prompt">(Scroll Down)</p>
+            </div>
+            <div class="main-text">
+                <svg class="triangle" xmlns="http://www.w3.org/2000/svg" version='1.1' viewBox='0 0 100 10' preserveAspectRatio='xMinYMid'>
+                    <polygon points="0,10 100,10 100,0" style='fill: #0d0d0d; stroke: #0d0d0d; stroke-width: 3'/>
+                </svg>
+                <div class="package black">
+                    <p>The unrest between the Rebel Alliance and the Galactic Empire has deteriorated into full scale war. The Empire have been surreptitiously building a new Death Star, larger and more powerful than the last. On the Forest Moon of the Planet of Endor, they have set up camp to operate a shield generator, which serves to protect the Death Star during the construction phase. If such a weapon became operational, it would surely spell the end for all who oppose the Empire.</p>
+                </div>
+                <svg class="triangle frosted" xmlns="http://www.w3.org/2000/svg" version='1.1' viewBox='0 0 100 10' preserveAspectRatio='xMinYMid'>
+                    <polygon points="0,0 100,10 100,0" style='fill: #0d0d0d;  stroke: #0d0d0d; stroke-width: 3'/>
+                </svg>
+                <div class="package frosted">
+                    <p>Thankfully for the Rebel Alliance, Botham spies have managed to learn of this plan before it's too late. Many died in the process in order to secure such information. The Rebels now have a very narrow window to act, and must thwart this operation for the sake of the Galaxy.</p>
+                </div>
+                <svg class="triangle frosted" xmlns="http://www.w3.org/2000/svg" version='1.1' viewBox='0 0 100 10' preserveAspectRatio='xMinYMid'>
+                    <polygon points="0,10 100,10 100,0" style='fill: #0d0d0d; stroke: #0d0d0d; stroke-width: 3'/>
+                </svg>
+                <div class="package black">
+                    <p>A fleet of Rebel starships now depend on a ground team led by Princess Leia Organa to disable the shield generator and provide a window of opportunity for the Rebels' remaining fleet to conduct an all out attack on the Death Star. The shield generator must remain disabled for the duration of the assault. Will you join the Princess' strike force and do your duty in restoring freedom to the galaxy?</p>
+                </div>
+                <svg class="triangle " xmlns="http://www.w3.org/2000/svg" version='1.1' viewBox='0 0 100 10' preserveAspectRatio='xMinYMid'>
+                    <polygon points="0,0 100,10 100,0" style='fill: #0d0d0d;  stroke: #0d0d0d; stroke-width: 3'/>
+                </svg>
+                <div class="big">
+                    <span id="bottom">The future of the galaxy is in your hands. Failure is not an option...</span>
+                </div>
+            </div>
 
-            <p>Thankfully for the Rebel Alliance, Botham spies have managed to learn of this plan before it's too late. Many died in the process in order to secure such information. The Rebels now have a very narrow window to act, and must thwart this operation for the sake of the Galaxy.</p>
-
-            <p>A fleet of Rebel starships now depend on a ground team led by Princess Leia Organa to disable the shield generator and provide a window of opportunity for the Rebels' remaining fleet to conduct an all out attack on the Death Star. The shield generator must remain disabled for the duration of the assault. Will you join the Princess' strike force and do your duty in restoring freedom to the galaxy?</p>
-
-            <p>The future of the galaxy is in your hands. Failure is not an option...</p>
         </div>
 
         <div class="planet-side">
