scrolling main text on index.html

--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
         <div class="text-side">
             <div class="big">
                 <span id="top">Join the Rebellion</span>
-                <p id="scroll-prompt">(Scroll Down)</p>
+                <img src="images/arrow.svg" id="scroll-prompt"/>
             </div>
             <div class="main-text">
                 <svg class="triangle" xmlns="http://www.w3.org/2000/svg" version='1.1' viewBox='0 0 100 10' preserveAspectRatio='xMinYMid'>
-                    <polygon points="0,10 100,10 100,0" style='fill: #0d0d0d; stroke: #0d0d0d; stroke-width: 3'/>
+                    <polygon points="0,10 100,10 100,0" style="fill: #0d0d0d; stroke: #0d0d0d; stroke-width: 3" />
                 </svg>
                 <div class="package black">
                     <p>The unrest between the Rebel Alliance and the Galactic Empire has deteriorated into full scale war. The Empire have been surreptitiously building a new Death Star, larger and more powerful than the last. On the Forest Moon of the Planet of Endor, they have set up camp to operate a shield generator, which serves to protect the Death Star during the construction phase. If such a weapon became operational, it would surely spell the end for all who oppose the Empire.</p>
