--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="text-side">
             <div class="big">
                 <span id="top">Join the Rebellion</span>
-                <img src="images/arrow.svg" id="scroll-prompt"/>
+                <p id="scroll-prompt">(Scroll Down)</p>
             </div>
             <div class="main-text">
                 <svg class="triangle" xmlns="http://www.w3.org/2000/svg" version='1.1' viewBox='0 0 100 10' preserveAspectRatio='xMinYMid'>
