--- a/signup.html
+++ b/signup.html
@@ -44,31 +44,51 @@
 
     </div>
 
-    <div class="profile-info">
+    <div class="user-info">
         <form class="info">
             <div class="info-line">
-                <span class="info-type">First Name: </span><input name="first-name" class="box"></input>
+                <span id="fname" class="info-type">First Name: </span><input name="first-name" class="box" />
             </div>
             <div class="info-line">
-                <span class="info-type">Last Name:</span><input name="last-name" class="box"></input>
+                <span id="lname" class="info-type">Last Name:</span><input name="last-name" class="box" />
             </div>
             <div class="info-line">
-                <span class="info-type">Username: </span><input name="username" class="box"></input>
+                <span id="uname" class="info-type">Username: </span><input name="username" class="box" />
             </div>
             <div class="info-line">
-                <span class="info-type">Email: </span><input name="email" class="box"></input>
+                <span id="email" class="info-type">Email: </span><input name="email" class="box" />
             </div>
-            <div id="button-container">
-                <button type="button" class='button-outfit'>Outfit Details</button>
-                <img id="costume-arrow" src="images/arrowRight.svg" alt="Your browser does not support svg"/>
+            <div class="info-line">
+                <span id="pass1" class="info-type">Password: </span><input type="password" name="password" class="box" />
             </div>
-            <div class="costume-info">
+            <div class="info-line">
+                <span id="pass2" class="info-type">Confirm Password: </span><input type="password" name="confirm-password" class="box" />
+            </div>
+            <div class="info-line">
+                <span class="info-type">Gender: </span>
+                <div class="genders">
+                    Male: <input type="radio" name="gender" class="radio male" value="male" />
+                    Female: <input type="radio" name="gender" class="radio female" value="female" />
+                </div>
+            </div>
 
+            <div id="button-container">
+                <input id="submit" type="submit" class='button-outfit' placeholder="Sign Up" />
             </div>
         </form>
     </div>
-    <div class="footer">
-        <h2> FOOTER HERE </h2>
-    </div>
+
+    <footer>
+        <hr id="footer-line" />
+        <p>
+            <a href = "#">Terms of Use</a> &amp; <a href = "#">Privacy Policy</a>
+        </p>
+        <p>
+            Contact us: <a href="#">email@email.com</a>
+        </p>
+        <p>
+            &#169; A Gathering of... (2016) - C Meehan and L White
+        </p>
+    </footer>
 </body>
 </html>
