working on signup request

--- a/signup.html
+++ b/signup.html
@@ -60,18 +60,18 @@
                 <span class="info-type">Email: </span><input name="email" class="box" />
             </div>
             <div class="info-line">
-                <span class="info-type">Password: </span><input type="password" name="password" class="box" />
+                <span class="info-type">Password: </span><input type="password" name="password" class="box" id="pass1" />
             </div>
             <div class="info-line">
-                <span class="info-type">Confirm Password: </span><input type="password" name="confirm-password" class="box" />
+                <span class="info-type">Confirm Password: </span><input type="password" name="confirm-password" class="box" id="pass2" />
             </div>
-            <div class="info-line">
-                <span class="info-type">Gender: </span>
-                <div class="genders">
-                    Male: <input type="radio" name="gender" class="radio" value="male" />
-                    Female: <input type="radio" name="gender" class="radio" value="female" />
-                </div>
-            </div>
+            <!--<div class="info-line">-->
+                <!--<span class="info-type">Gender: </span>-->
+                <!--<div class="genders">-->
+                    <!--Male: <input type="radio" name="gender" class="radio" value="male" />-->
+                    <!--Female: <input type="radio" name="gender" class="radio" value="female" />-->
+                <!--</div>-->
+            <!--</div>-->
 
             <div id="button-container">
                 <input type="submit" class='button-outfit' placeholder="Sign Up" />
