server side can log in, and log out and create user

--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
     <title>Demo</title>
 </head>
 <body>
-
-
     <div id="top-bar">
         <div class="title-bar">
             <div class="slider">
@@ -39,6 +37,7 @@
                 <div id = "login-hint">Log in</div>
             </div>
         </div>
+        <div id="trooperbox">
             <form id = "login">
                 <input id="username" type="text" name="username" placeholder="Username" /><br/>
                 <div class="form-indicator" id="usernamehint"></div>
@@ -47,6 +46,7 @@
                 <input type="submit" value="log in" class="button"/><br />
                 <a href="signup.html" class="button" id="sign-up">sign up</a>
             </form>
+        </div>
     </div>
     <div class="content">
         <div class="text-side">
