--- a/profile.html
+++ b/profile.html
@@ -33,15 +33,16 @@
                 <div id = "login-hint">Log in</div>
             </div>
         </div>
+        <div id="trooperbox">
             <form id = "login">
-                <input type="text" name="username" placeholder="Username" /><br/>
+                <input id="username" type="text" name="username" placeholder="Username" /><br/>
                 <div class="form-indicator" id="usernamehint"></div>
-                <input type="password" name="password" placeholder="Password"/><br/>
+                <input id="password" type="password" name="password" placeholder="Password"/><br/>
                 <div class="form-indicator"></div>
                 <input type="submit" value="log in" class="button"/><br />
-                <a href="#" class="button" id="sign-up">sign up</a>
+                <a href="signup.html" class="button" id="sign-up">sign up</a>
             </form>
-
+        </div>
     </div>
 
     <div class="profile-info">
