--- a/tickets.html
+++ b/tickets.html
@@ -11,7 +11,6 @@
 <title>Demo</title>
 </head>
 <body>
-
     <div id="top-bar">
         <div class="title-bar">
             <div class="slider">
@@ -36,14 +35,16 @@
                 <div id = "login-hint">Log in</div>
             </div>
         </div>
+        <div id="trooperbox">
             <form id = "login">
-                <input type="text" name="username" placeholder="Username" /><br/>
+                <input id="username" type="text" name="username" placeholder="Username" /><br/>
                 <div class="form-indicator" id="usernamehint"></div>
-                <input type="password" name="password" placeholder="Password"/><br/>
+                <input id="password" type="password" name="password" placeholder="Password"/><br/>
                 <div class="form-indicator"></div>
                 <input type="submit" value="log in" class="button"/><br />
-                <a href="#" class="button" id="sign-up">sign up</a>
+                <a href="signup.html" class="button" id="sign-up">sign up</a>
             </form>
+        </div>
     </div>
     <div id='tickets'>
         <img id="forest-back" src="images/forest.jpg" alt="Forest 1"/>
