checks if user exists and returns error if they do

--- a/signup.html
+++ b/signup.html
@@ -48,22 +48,22 @@
     <div class="user-info">
         <form id="sign-up-form">
             <div class="info-line">
-                <span class="info-type">First Name: </span><input name="fname" class="value" />
+                <span class="info-type">First Name:</span><input name="fname" class="signinput" />
             </div>
             <div class="info-line">
-                <span class="info-type">Last Name:</span><input name="lname" class="value" />
+                <span class="info-type">Last Name:</span><input name="lname" class="signinput" />
             </div>
             <div class="info-line">
-                <span class="info-type">Username: </span><input name="username" class="value" />
+                <span class="info-type">Username:</span><input name="username" class="signinput" />
             </div>
             <div class="info-line">
-                <span class="info-type">Email: </span><input name="email" class="value" />
+                <span class="info-type">Email:</span><input name="email" class="signinput" />
             </div>
             <div class="info-line">
-                <span class="info-type">Password: </span><input type="password" name="password" class="value" id="pass1" />
+                <span class="info-type">Password:</span><input type="password" name="password" class="signinput" id="pass1" />
             </div>
             <div class="info-line">
-                <span class="info-type">Confirm Password: </span><input type="password" name="confirm-password" class="value" id="pass2" />
+                <span class="info-type">Confirm Password:</span><input type="password" name="confirm-password" class="signinput" id="pass2" />
             </div>
             <div class="info-line">
                 <span class="info-type">Gender: </span>
