more responsive tickets page

--- a/tickets.html
+++ b/tickets.html
@@ -8,6 +8,7 @@
 <script src="js/script.js" type="text/javascript"></script>
 <script src="js/tickets.js" type="text/javascript"></script>
 
+
 <title>Demo</title>
 </head>
 <body>
@@ -66,10 +67,10 @@
                     </ul>
                 </div>
                 <div class='buttons'>
-                    <a href="#" class='purchase'>Purchase Ticket</a>
-                    <a href='#' class='terms'>Terms and Conditions</a>
+                    <button class='purchase'>Purchase Ticket</button>
+                    <button class='terms'>Terms and Conditions</button>
                     <p>Already have a ticket?</p>
-                    <a href='#' class='sign-in'>Log In</a>
+                    <button class='sign-in'>Log In</button>
                 </div>
             </div>
                 <svg class="triangle frosted" xmlns="http://www.w3.org/2000/svg" version='1.1' viewBox='0 0 100 10' preserveAspectRatio='xMinYMid'>
@@ -77,10 +78,10 @@
                 </svg>
             <div class="package frosted">
                 <div class='buttons'>
-                    <a href="#" class='purchase'>Purchase Ticket</a>
-                    <a href='#' class='terms'>Terms and Conditions</a>
+                    <button class='purchase purchase-frosted'>Purchase Ticket</button>
+                    <button class='terms-frosted'>Terms and Conditions</button>
                     <p>Already have a ticket?</p>
-                    <a href='#' class='sign-in'>Log In</a>
+                    <button class='sign-in'>Log In</button>
                 </div>
                 <div class='text'>
                     <h2 class="packageHeading">Rebel Package<br/>
@@ -112,10 +113,10 @@
                     </ul>
                 </div>
                 <div class='buttons'>
-                    <a href="#" class='purchase'>Purchase Ticket</a>
-                    <a href='#' class='terms'>Terms and Conditions</a>
+                    <button class='purchase'>Purchase Ticket</button>
+                    <button class='terms'>Terms and Conditions</button>
                     <p>Already have a ticket?</p>
-                    <a href='#' class='sign-in'>Log In</a>
+                    <button class='sign-in'>Log In</button>
                 </div>
             </div>
             <svg class="triangle " xmlns="http://www.w3.org/2000/svg" version='1.1' viewBox='0 0 100 10' preserveAspectRatio='xMinYMid'>
