--- a/signup.html
+++ b/signup.html
@@ -68,8 +68,8 @@
             <div class="info-line">
                 <span class="info-type">Gender: </span>
                 <div class="genders">
-                    M: <input type="radio" name="gender" class="gender-button" value="male" />
-                    F: <input type="radio" name="gender" class="gender-button" value="female" />
+                    M: <input type="radio" name="gender" class="gender-button" value="Male" />
+                    F: <input type="radio" name="gender" class="gender-button" value="Female" />
                 </div>
             </div>
 
