deleted old servers

--- a/profile.html
+++ b/profile.html
@@ -50,6 +50,8 @@
     <div class = "profile-pic">
         <img class="pic-circle" src="images/pic-circle.svg" alt="Your browser does not support svg" />
         <img class="pic" src="images/user.svg" />
+        <input type="file" onchange="previewFile()">
+        <img src="" id="new-pic" />
     </div>
     <div class="info">
         <div class="info-line">
