added styling to tickets

--- a/profile.html
+++ b/profile.html
@@ -50,7 +50,7 @@
     <div class = "profile-pic">
         <img class="pic-circle" src="images/pic-circle.svg" alt="Your browser does not support svg" />
         <img class="pic" src="images/user.svg" />
-        <input type="file" onchange="previewFile()">
+        <input type="file" onchange="previewFile()"/>
         <img src="" id="new-pic" />
     </div>
     <div class="info">
@@ -65,9 +65,6 @@
         </div>
         <div class="info-line">
             <span class="info-type">Gender: </span> <div id="gender" class="box"></div>
-        </div>
-        <div class="info-line">
-            <span class="info-type">Tickets: </span> <div class="box"></div>
         </div>
         <div id="button-container">
             <button type="button" class='button-outfit'>Outfit Details</button>
