--- a/tickets.html
+++ b/tickets.html
@@ -71,6 +71,7 @@
                     <button class='terms'>Terms and Conditions</button>
                     <p>Already have a ticket?</p>
                     <button class='sign-in'>Log In</button>
+                    <div class="procured" id="ewok-purchased"><img class="tick" src="images/tick.svg" /><span id="rebel-purchased-text" class="purchased-text"> Tickets purchased: </span></div>
                 </div>
             </div>
                 <svg class="triangle frosted" xmlns="http://www.w3.org/2000/svg" version='1.1' viewBox='0 0 100 10' preserveAspectRatio='xMinYMid'>
@@ -82,6 +83,7 @@
                     <button class='terms-frosted'>Terms and Conditions</button>
                     <p>Already have a ticket?</p>
                     <button class='sign-in'>Log In</button>
+                    <div class="procured" id="rebel-purchased"><img class="tick" src="images/tick.svg" /><p class="procured-text">Hello</p></div>
                 </div>
                 <div class='text'>
                     <h2 class="packageHeading">Rebel Package<br/>
@@ -117,6 +119,7 @@
                     <button class='terms'>Terms and Conditions</button>
                     <p>Already have a ticket?</p>
                     <button class='sign-in'>Log In</button>
+                    <div class="procured" id="jedi-purchased"><img class="tick" src="images/tick.svg" /><span id="rebel-purchased-text" class="purchased-text"> Tickets purchased: </span></div>
                 </div>
             </div>
             <svg class="triangle " xmlns="http://www.w3.org/2000/svg" version='1.1' viewBox='0 0 100 10' preserveAspectRatio='xMinYMid'>
