can purchase tickets boi

--- a/tickets.html
+++ b/tickets.html
@@ -67,11 +67,11 @@
                     </ul>
                 </div>
                 <div class='buttons'>
-                    <button class='purchase'>Purchase Ticket</button>
+                    <button id="ewok-purchase" class='purchase'>Purchase Ticket</button>
                     <button class='terms'>Terms and Conditions</button>
                     <p>Already have a ticket?</p>
                     <button class='sign-in'>Log In</button>
-                    <div class="procured" id="ewok-purchased"><img class="tick" src="images/tick.svg" /><span id="rebel-purchased-text" class="purchased-text"> Tickets purchased: </span></div>
+                    <div class="procured"><img class="tick" src="images/tick.svg" /><span id="ewok-text" class="purchased-text"></span></div>
                 </div>
             </div>
                 <svg class="triangle frosted" xmlns="http://www.w3.org/2000/svg" version='1.1' viewBox='0 0 100 10' preserveAspectRatio='xMinYMid'>
@@ -79,11 +79,11 @@
                 </svg>
             <div class="package frosted">
                 <div class='buttons'>
-                    <button class='purchase purchase-frosted'>Purchase Ticket</button>
+                    <button id="rebel-purchase" class='purchase purchase-frosted'>Purchase Ticket</button>
                     <button class='terms-frosted'>Terms and Conditions</button>
                     <p>Already have a ticket?</p>
                     <button class='sign-in'>Log In</button>
-                    <div class="procured" id="rebel-purchased"><img class="tick" src="images/tick.svg" /><p class="procured-text">Hello</p></div>
+                    <div class="procured"><img class="tick" src="images/tick.svg" /><div id="rebel-text" class="purchased-text"></div></div>
                 </div>
                 <div class='text'>
                     <h2 class="packageHeading">Rebel Package<br/>
@@ -115,11 +115,11 @@
                     </ul>
                 </div>
                 <div class='buttons'>
-                    <button class='purchase'>Purchase Ticket</button>
+                    <button id="jedi-purchase" class='purchase'>Purchase Ticket</button>
                     <button class='terms'>Terms and Conditions</button>
                     <p>Already have a ticket?</p>
                     <button class='sign-in'>Log In</button>
-                    <div class="procured" id="jedi-purchased"><img class="tick" src="images/tick.svg" /><span id="rebel-purchased-text" class="purchased-text"> Tickets purchased: </span></div>
+                    <div class="procured" ><img class="tick" src="images/tick.svg" /><span id="jedi-text" class="purchased-text"></span></div>
                 </div>
             </div>
             <svg class="triangle " xmlns="http://www.w3.org/2000/svg" version='1.1' viewBox='0 0 100 10' preserveAspectRatio='xMinYMid'>
