--- a/profile.html
+++ b/profile.html
@@ -70,14 +70,35 @@
             <button type="button" class='button-outfit'>Outfit Details</button>
             <img id="costume-arrow" src="images/arrowright.svg" alt="Your browser does not support svg"/>
         </div>
-        <div class="costume-info">
-
+        <div class="costume-container">
+            <div class="costume-info">
+                <span>Head:</span> <div class="costume-box" id="head"></div>
+            </div>
+            <div class="costume-info">
+                <span>Torso: </span><div class="costume-box" id="torso"></div>
+            </div>
+            <div class="costume-info">
+                <span>Legs: </span><div class="costume-box" id="legs"></div>
+            </div>
+            <div class="costume-info">
+                <span>Feet: </span><div class="costume-box" id="feet"></div>
+            </div>
         </div>
     </div>
 
     </div>
-    <div class="footer">
-        <h2> FOOTER HERE </h2>
-    </div>
+    <div class="spacer"></div>
+    <footer>
+        <hr id="footer-line" />
+        <p>
+            <a href = "#">Terms of Use</a> &amp; <a href = "#">Privacy Policy</a>
+        </p>
+        <p>
+            Contact us: <a href="#">email@email.com</a>
+        </p>
+        <p>
+            &#169; A Gathering of... (2016) - C Meehan and L White
+        </p>
+    </footer>
 </body>
 </html>
