login form displays error message if username and password do not match an entry in the data base. also general refactoring.

--- a/event.html
+++ b/event.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-GB" xml:lang="en-GB">
 <head>
-<meta charset="UTF-8"/>
-<link href="css/topbar.css" rel="stylesheet" type="text/css" />
-<link href="css/event.css" rel="stylesheet" type="text/css" />
-<script src="js/script.js" type="text/javascript"></script>
-<script src="js/social_media.js" type="text/javascript"></script>
-<script src = "js/jquery-1.12.2.min.js"></script>
-<script src = "js/location.js"></script>
-<title>Demo</title>
+    <meta charset="UTF-8"/>
+    <link href="css/topbar.css" rel="stylesheet" type="text/css" />
+    <link href="css/event.css" rel="stylesheet" type="text/css" />
+    <script src="js/script.js" type="text/javascript"></script>
+    <script src="js/social_media.js" type="text/javascript"></script>
+    <script src = "js/jquery-1.12.2.min.js"></script>
+    <script src = "js/location.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?callback=initMap" async="" defer=""></script>
+    <title>Demo</title>
 </head>
 <body>
     <div id="top-bar">
@@ -98,7 +99,21 @@
 
 
     </div>
-    <script src="https://maps.googleapis.com/maps/api/js?callback=initMap" async="" defer="">
-    </script>
+
+    <div class="spacer"></div>
+    <footer>
+        <hr id="footer-line" />
+        <p>
+            <a href = "#">Terms of Use</a> &amp; <a href = "#">Privacy Policy</a>
+        </p>
+        <p>
+            Contact us: <a href="#">email@email.com</a>
+        </p>
+        <p>
+            &#169; A Gathering of... (2016) - C Meehan and L White
+        </p>
+    </footer>
+
+
 </body>
 </html>
