abandoned upload image. Changed twitter functionality on event.html to share

--- a/event.html
+++ b/event.html
@@ -49,11 +49,12 @@
     </div>
 
     <div class="social-media">
-        <img id="twitter" src="images/twitter.svg" />
+        <div class="share-text">Share</div>
+        <a class="twitter-share-button" href="https://twitter.com/intent/tweet?text=Join%20the%20rebellion%0A%23StarWars"><img id="twitter" src="images/twitter.svg" /></a>
+
         <img id="instagram" src="images/instagram.svg" />
         <img id="facebook" src="images/facebook.svg" />
     </div>
-    <a class="twitter-timeline" href="https://twitter.com/hashtag/StarWars" data-widget-id="714488031558901761"></a>
     <div id="event-info">
         <h2>The Event</h2>
         <p>
