different package info

--- a/tickets.html
+++ b/tickets.html
@@ -90,10 +90,10 @@
                             <div class='underline'></div>
                     </h2>
                     <ul>
-                        <li>Entry into the arena</li>
-                        <li>Access to all standard events</li>
-                        <li>Complimentary key chain</li>
-                        <li>Photo opportunity with a real Ewok</li>
+                        <li>Standard entry to the paintball game</li>
+                        <li>1000 complimentary paintballs</li>
+                        <li>Event T-Shirt</li>
+                        <li>Photo opportunities with some original cast members</li>
                     </ul>
 
                 </div>
@@ -108,10 +108,10 @@
                             <div class='underline'></div>
                     </h2>
                     <ul>
-                        <li>Entry into the arena</li>
-                        <li>Access to all standard events</li>
-                        <li>Complimentary key chain</li>
-                        <li>Photo opportunity with a real Ewok</li>
+                        <li>Fully automatic paintball gun for the game</li>
+                        <li>5000 complimentary paintballs</li>
+                        <li>Event T-Shirt, Hoody and Posters</li>
+                        <li>Photo opportunities with Mark Hamill and Carrie Fisher</li>
                     </ul>
                 </div>
                 <div class='buttons'>
