--- a/event.html
+++ b/event.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8"/>
     <link href="css/topbar.css" rel="stylesheet" type="text/css" />
     <link href="css/event.css" rel="stylesheet" type="text/css" />
+    <script src = "js/jquery-1.12.2.min.js"></script>
     <script src="js/script.js" type="text/javascript"></script>
     <script src="js/social_media.js" type="text/javascript"></script>
-    <script src = "js/jquery-1.12.2.min.js"></script>
     <script src = "js/location.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?callback=initMap" async="" defer=""></script>
     <title>Demo</title>
@@ -56,46 +56,44 @@
         <img id="facebook" src="images/facebook.svg" />
     </div>
     <div id="event-info">
-        <h2>The Event</h2>
-        <p>
-            The rebellion is massing on Endor, preparing an assault on the shield generator.
-        </p>
+        <h1>The Event</h1>
         <img class="event-image" src="images/redwood1.jpg" alt="Forest 1"/>
-        <h1>HELLO</h1>
+        <p class="event-text">
+            The rebellion is massing on the forest moon of Endor, the location of the secret shield generator
+            protecting central hub of Empire operations, the Death Star. We need you, to join the  rebellion and
+            help topple the tyrannical Emperor and his puppets.
+        </p>
+        <h2></h2>
         <img class="event-image" src="images/redwood3.jpg" alt="Forest 3"/>
-        <p class="event-text">TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
-            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
-            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
-            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
-            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
-            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
-            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
-            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
-            TEXT TEXT
+        <p class="event-text">Upon landing on the moon, you will be greeted by your squadron commander and directed
+            to your encampment. Upon arriving you will be provided with your schedule, which will vary depending
+            on your package. Package details can be found <a class="text-link" href="tickets.html">here</a>.
         </p>
-        <p class="event-text">TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
-            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
-            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
-            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
-            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
-            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
-            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
-            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
-            TEXT TEXT
+        <p class="event-text">
+            Ensure that you have logged into your account and that you have prepared
+            the necessary equipment and clothing. Landings commence at dawn (July 5th).
         </p>
+        <p class="event-text">
+            The schedule for the event will be emailed to all ticket holders in advance, however expect to see:
+            <ul>
+                <li>Giant paintball battle</li>
+                <li>Speeder rides</li>
+                <li>Nighttime, outdoor screening of <i>Return of the Jedi</i></li>
+                <li>Photo opportunities with <i>Star Wars</i> characters</li>
+            </ul>
+        </p>
+        <p class="event-text">
+        </p>
+        <h2>Location</h2>
+        <p class="event-text">The event will in the Redwood National Park in Northern California. Below is a map showing the specific
+        location. For more information, please feel free to contact us at <a href="#"  class="text-link">email@email.com</a></p>
         <div id="map"></div>
-        <p class="event-text">TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
-            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
-            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
-            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
-            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
-            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
-            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
-            TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
-            TEXT TEXT
-        </p>
-
+        <p class="event-text">A range of events and stalls will be running throughout the event. Access to certain
+            to certain events or areas of the arena may be limited based upon your ticket package.
+            Tickets to additional events may be purchased separately on the day, subject to
+        availability.</p>
         <img class="event-image" src="images/redwood2.jpg" alt="Forest 2"/>
+        <h2>May the force be with you...</h2>
 
 
 
